--- a/index.html
+++ b/index.html
@@ -1,42 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Intro component with sign up form</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <main>
 
-  Learn to code by watching others
+    <h1>Learn to code by watching others</h1>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+    <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+      but understanding how developers think is invaluable.</p>
 
-  Try it free 7 days then $20/mo. thereafter
 
-  First Name 
-  Last Name 
-  Email Address
-  Password
+    <div>Try it free 7 days then $20/mo. thereafter</div>
 
-  Claim your free trial 
+    <div class="form-container">
+      <form action="">
+        <div>
+          <input type="text" id="first" name="firstname" placeholder="First Name" required>
+          <label for="first"></label>
+        </div>
 
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+        <div>
+          <input type="text" id="last" name="lastname" placeholder="Last Name" required>
+          <label for="last"></label>
+        </div>
+
+        <div>
+          <input type="email" id="email" name="email" placeholder="Email Address" required>
+        </div>
+
+        <div>
+          <input type="password" id="password" name="password" placeholder="Password" required>
+        </div>
+
+        <button>Claim your free trial</button>
+      </form>
+
+      <span>By clicking the button, you are agreeing to our Terms and Services</span>
+    </div>
+    <footer>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Marcus Hugo</a>.
+      </p>
+    </footer>
+  </main>
 </body>
+
 </html>
