--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
     <h1>Learn to code by watching others</h1>
 
-    <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+    <p class="see-how">See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
       but understanding how developers think is invaluable.</p>
 
 
-    <div>Try it free 7 days then $20/mo. thereafter</div>
+    <div class="trial"><span class="try-it">Try it free 7 days</span> then $20/mo. thereafter</div>
 
     <div class="form-container">
       <form action="">
@@ -48,10 +48,10 @@
           <input type="password" id="password" name="password" placeholder="Password" required>
         </div>
 
-        <button>Claim your free trial</button>
+        <button class="claim-button">Claim your free trial</button>
       </form>
 
-      <span>By clicking the button, you are agreeing to our Terms and Services</span>
+      <p class="by-clicking">By clicking the button, you are agreeing to our <span class="terms">Terms and Services</span></p>
     </div>
     <footer>
       <p class="attribution">
