--- a/index.html
+++ b/index.html
@@ -20,46 +20,53 @@
 <body>
   <main>
 
-    <h1>Learn to code by watching others</h1>
+    <div class="left">
+      <h1>Learn to code by watching others</h1>
 
-    <p class="see-how">See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
-      but understanding how developers think is invaluable.</p>
-
-
-    <div class="trial"><span class="try-it">Try it free 7 days</span> then $20/mo. thereafter</div>
-
-    <div class="form-container">
-      <form action="">
-        <div>
-          <input type="text" id="first" name="firstname" placeholder="First Name" required>
-          <label for="first"></label>
-        </div>
-
-        <div>
-          <input type="text" id="last" name="lastname" placeholder="Last Name" required>
-          <label for="last"></label>
-        </div>
-
-        <div>
-          <input type="email" id="email" name="email" placeholder="Email Address" required>
-        </div>
-
-        <div>
-          <input type="password" id="password" name="password" placeholder="Password" required>
-        </div>
-
-        <button class="claim-button">Claim your free trial</button>
-      </form>
-
-      <p class="by-clicking">By clicking the button, you are agreeing to our <span class="terms">Terms and Services</span></p>
+      <p class="see-how">See how experienced developers solve problems in real-time. Watching scripted tutorials is
+        great,
+        but understanding how developers think is invaluable.</p>
     </div>
+
+    <div class="right">
+      <div class="trial"><span class="try-it">Try it free 7 days</span> then $20/mo. thereafter</div>
+
+      <div class="form-container">
+        <form action="">
+          <div>
+            <input type="text" id="first" name="firstname" placeholder="First Name" required>
+            <label for="first"></label>
+          </div>
+
+          <div>
+            <input type="text" id="last" name="lastname" placeholder="Last Name" required>
+            <label for="last"></label>
+          </div>
+
+          <div>
+            <input type="email" id="email" name="email" placeholder="Email Address" required>
+          </div>
+
+          <div>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+          </div>
+
+          <button class="claim-button">Claim your free trial</button>
+        </form>
+
+        <p class="by-clicking">By clicking the button, you are agreeing to our <span class="terms">Terms and
+            Services</span></p>
+      </div>
+    </div>
+  </main>
+  
     <footer>
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
         Coded by <a href="#">Marcus Hugo</a>.
       </p>
     </footer>
-  </main>
+  
 </body>
 
 </html>
